<resources>
    <string name="app_name">TaskManager</string>
    <string name="add_button_label">Dodaj nowe zadanie</string>
    <string name="save_button_label">Zapisz zmiany</string>


    <string name="add_task_label">Dodaj zadanie</string>
    <string name="edit_task_label">Edtuj zadanie</string>
    <string name="title_label">Tytuł</string>
    <string name="load_icon">wczytaj ikonę</string>
    <string name="desciption_label">Opis</string>
    <string name="title_alert">Tytuł nie moze byc pusty</string>
    <string name="confirm_deletion">Czy napewno chcesz usunąć wybrane zadanie?</string>
    <string name="sort_method_label">Sortuj wg:</string>
    <string name="tasks_list_header">Lista Zadań</string>
    <string name="ending">"Koniec: "</string>
    <string name="ending_unknows">Koniec: nie określono</string>
    <string name="deadline_label">Czas realizacji zadania</string>
    <string name="unexpected_error_label">Wystąpił nieoczekiwany bład</string>
    <string name="task_ending">Koniec zadania</string>
    <string name="task_creating">Data utworzenia</string>
</resources>
