<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#938D918D"
    tools:context="com.example.saviola44.taskmanager.MainActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:id="@+id/main_act_header"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="@dimen/big_text_size"
        android:textStyle="bold"
        android:background="#FF323633"
        android:text="@string/tasks_list_header"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_btn"
        style="@style/my_button_style"

        android:text="@string/add_button_label"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />


        <Spinner
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_gravity="right"
            android:layout_below="@id/main_act_header"
            android:layout_alignParentRight="true"
            android:id="@+id/sorted_comp_spinner"></Spinner>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/sort_method_label"
        android:gravity="center"
        android:layout_below="@id/main_act_header"
        android:layout_toLeftOf="@id/sorted_comp_spinner"/>



        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/task_list_id"
            android:layout_below="@id/sorted_comp_spinner"
            android:layout_above="@id/add_btn"
            android:layout_marginBottom="0dp">

        </ListView>

</RelativeLayout>
